<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/amarillo"
    android:layout_height="match_parent"
    tools:context=".controller.MenuApp">

    <Button
        android:onClick="numeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/numeros"
        android:layout_marginTop="25sp"/>
    <Button
        android:onClick="colores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/colores"
        android:layout_marginTop="25sp"/>
    <Button
        android:onClick="animales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/animales"
        android:layout_marginTop="25sp"/>
    <Button
        android:onClick="frutas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/frutas"
        android:layout_marginTop="25sp"/>


</LinearLayout>