<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/amarillo"
    android:layout_height="match_parent"
    tools:context=".controller.Menu2_preg1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/azul"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/alerDial"
        android:layout_margin="60dp"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <Button
        android:onClick="alerta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="@color/purple"
        android:text="@string/alert1" />
    <Button
        android:onClick="alerta2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="@color/purple"
        android:text="@string/alert2" />
    <Button
        android:onClick="alerta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="@color/purple"
        android:text="@string/alert2" />
    <Button
        android:onClick="alerta4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="@color/purple"
        android:text="@string/alert4" />

</LinearLayout>